WIP: Replaces runtime.exec with ProcessBuilder invocation.